--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
     issue: "Issue"
     wiki_page: "Wiki Page"
     project: "Project"
+    search_button: "Search!"
     facets:
       values:
         "false": "No"
