--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@
 en:
   redsun:
     settings:
-      enable_solr_search: "Enable Solr search"
+      enable_solr_search_field: "Enable Solr search"
     inactive: "Inactive"
     records: "Records"
     header: "Solr Search by RedSun"
